# SpeedUp

./: BENCHMARKS.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  benchmark_win.c  results.csv
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_regression.md
benchmarks/scripts/: run_all.py  run_windows_benchmark.ps1
bindings/: README.md
bindings/c/: README.md
bindings/cpp/: README.md
bindings/csharp/: README.md
bindings/go/: README.md
bindings/java/: README.md
bindings/javascript/: README.md
bindings/kotlin/: README.md
bindings/python/: README.md  smoke_test.py
bindings/r/: README.md
bindings/rust/: README.md
bindings/scala/: README.md
bindings/swift/: README.md
bindings/typescript/: README.md
bindings/zig/: README.md
ci/github/workflows/: bindings.yml  build-test.yml
codegen/: README.md  generate_specializations.py  types.yaml
docs/api/: README.md
docs/architecture/: overview.md
docs/gpu/: cuda_backend.md  opencl_backend.md
docs/papers/: binary_search_results_analysis.md  bsearch_paper.html
docs/tutorials/language-setup/: c.md  cpp.md  csharp.md  go.md  java.md  javascript.md  kotlin.md  python.md  r.md  rust.md  scala.md  swift.md  typescript.md  zig.md
include/speedup/: api.h  config.h.in  version.h
include/speedup/algorithms/: binary_search.h
include/speedup/backend/: dispatch.h
legacy/: bsearch.asm  build_windows.bat  test_corrections.c
src/algorithms/binary_search/: binary_search_dispatch.c  binary_search_ref.c
src/backends/gpu/common/: gpu_backend_common.c
src/backends/gpu/cuda/: binary_search_cuda.cu  cuda_runtime_check.c
src/backends/gpu/opencl/: binary_search_opencl.c  opencl_runtime_check.c
src/core/: cpu_features.c  dispatch.c  init.c
tests/unit/: test_binary_search.c
